<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>esda_launch</name>
  <version>0.0.0</version>
  <description>Top level launch package for the ESDA stack</description>
  <maintainer email="s.a.baaset.moslih@gmail.com">mcav</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>slam_toolbox</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>navigation2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
